Adjusted CSS of NavBar to prevent overlap with Explore list

--- a/frontend/src/components/Explore/Explore.module.css
+++ b/frontend/src/components/Explore/Explore.module.css
@@ -30,7 +30,7 @@
 .mainContent{
     width: 86.7vw;
     margin-left: 13.3vw;
-    margin-top: 11.3vh;
+    margin-top: 15.3vh;
 }
 
 .container {
