--- a/frontend/src/components/navbar/RebelHubNavBar.module.css
+++ b/frontend/src/components/navbar/RebelHubNavBar.module.css
@@ -16,7 +16,7 @@
 }
 .homeButton{
 	width: 250px;
-	height: 100px;
+	height: 14vh;
 	border: none;
 	background-color: transparent;
 }
